--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,17 @@ before_install:
   
 script:
   - docker run karthiksamaganam/docker_react_repo npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-southeast-2"
+  app: "docker-react-app"
+  env: "DockerReactApp-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-2-961696309176"
+  bucket_path: "docker-react-app"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"   
+
